# depcheck

./: AI-Disclosure.md  Dockerfile  Documentation.md  ReadMe.md  analyze.py  app.py  requirements.txt
Test Data/: Pipfile  README.md  pyproject.toml  requirements.txt  setup.py
